# TankTrouble

./: .gitignore  Cargo.toml  pnpm-lock.yaml
.github/workflows/: ci.yml
client/: biome.json  index.html  package.json  tsconfig.json
client/src/: input.ts  main.ts  map.ts  physics.ts  renderer.ts
docs/: architecture.md
server/: Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs  map.rs  physics.rs  protocol.rs  wasm.rs
