[package]
name = "tank-trouble-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tank-trouble-shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
