[package]
name = "tank-trouble-shared"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook"]

[dependencies]
rapier2d = { version = "0.22", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASM-only deps
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
